Modifs pre-formation

--- a/07-activites/01-premiere/mouvement_parabolique_et_acceleration_csv/mouvement_parabolique_et_acceleration_avec_fonctions.ipynb
+++ b/07-activites/01-premiere/mouvement_parabolique_et_acceleration_csv/mouvement_parabolique_et_acceleration_avec_fonctions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mouvement parabolique et accélération"
+    "# Mouvement parabolique et accélération (version avec fonctions)"
    ]
   },
   {
