--- a/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_eleve-download.ipynb
+++ b/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_eleve-download.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mouvement d'un satellite géostationnaire"
+    "## Mouvement d'un satellite géostationnaire (version élève)"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problématique : Comment la force d'attraction gravitationnelle exercée par la Terre sur le satellite GOES-17 influence la variation de son vecteur vitesse?"
+    "**Problématique : Comment la force d'attraction gravitationnelle exercée par la Terre sur le satellite GOES-17 influence la variation de son vecteur vitesse?**"
    ]
   },
   {
