--- a/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_eleve.ipynb
+++ b/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_eleve.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mouvement d'un satellite géostationnaire"
+    "## Mouvement d'un satellite géostationnaire (version élève)"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problématique : Comment la force d'attraction gravitationnelle exercée par la Terre sur le satellite GOES-17 influence la variation de son vecteur vitesse?"
+    "**Problématique : Comment la force d'attraction gravitationnelle exercée par la Terre sur le satellite GOES-17 influence la variation de son vecteur vitesse?**"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
