--- a/07-activites/01-premiere/signal_periodique/signal_periodique_prof-avec_fonction.ipynb
+++ b/07-activites/01-premiere/signal_periodique/signal_periodique_prof-avec_fonction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Etude de l'influence de l'amplitude et de la période pour un signal périodique**\n",
+    "# Etude de l'influence de l'amplitude et de la période pour un signal périodique (version prof)\n",
     "\n",
     "Nous allons étudier un signal sinusoïdal. Un tel signal se répète identique à lui-même tous les 2 $\\pi$, au bout d'une durée T (période en s).\n",
     "\n",
@@ -79,7 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Etude préalable :**\n",
+    "**Etude préalable :**\n",
+    "\n",
     "En tenant compte des renseignements donnés lignes 6, 7 et 12, répondez aux questions suivantes :\n",
     "1. Combien d'échantillons temporels aura-t-on?\n",
     "2. Par quel calcul simple aurait-on pu prévoir la durée du signal créé?\n",
