--- a/07-activites/01-premiere/suivi_avancement/Avancement_sans fonction_prof-sans_input.ipynb
+++ b/07-activites/01-premiere/suivi_avancement/Avancement_sans fonction_prof-sans_input.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Etude de l'évolution d'un système chimique \n",
+    "# Etude de l'évolution d'un système chimique (version prof)\n",
     "\n",
     "Ce programme permet d'étudier l'évolution des quantités de matière des réactifs et produits d'une réaction dont l'équation est du type :\n",
     "aA + bB -->   cC + dD\n",
