--- a/07-activites/02-seconde/loi_d_ohm/loi_ohm_eleve_polyfit_sans_fonction.ipynb
+++ b/07-activites/02-seconde/loi_d_ohm/loi_ohm_eleve_polyfit_sans_fonction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Activité : La loi d’Ohm\n",
+    "# La loi d’Ohm (version élève, polyfit et sans fonction)\n",
     "\n",
     "\n",
     "Mathilde, élève de 2nde, souhaite tracer la caractéristique d’un dipôle ohmique, c’est-à-dire la courbe donnant les valeurs de la tension aux bornes du dipôle ohmique en fonction des valeurs de l’intensité du courant qui le traverse.\n"
