--- a/07-activites/02-seconde/loi_d_ohm/loi_ohm_polyfit_avec_fonctions.ipynb
+++ b/07-activites/02-seconde/loi_d_ohm/loi_ohm_polyfit_avec_fonctions.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Activité : La loi d’Ohm"
+    "# La loi d’Ohm (version polyfit et avec fonctions)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ![tableau.png](tableau.png)"
+    "![tableau.png](tableau.png)"
    ]
   },
   {
@@ -20,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -36,10 +35,14 @@
     "# modélisation par une droite d'équation \n",
     "# y=ax+b (polynôme d'ordre 1)\n",
     "\n",
+    "# la fonction polyfit permet de déterminer les \n",
+    "# coefficients a=coef[0] et b=coef[1] de la droite\n",
+    "# ymodel permet de déterminer les valeurs modélisées de y\n",
+    "\n",
     "def modelisation(x,y):\n",
-    "    slope, intercept, r_value, p_value, std_error = stats.linregress(x,y)\n",
-    "    ymodel = slope*x+intercept\n",
-    "    print ('U= {0:.1f}'.format(slope),'x I') \n",
+    "    coef=np.polyfit(x,y,1)              \n",
+    "    ymodel=coef[0]*x+coef[1]            \n",
+    "    print ('U= {0:.1f}'.format(coef[0]),'x I')         \n",
     "    return (ymodel)"
    ]
   },
@@ -49,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fonction permettant de tracer le graphique avec les points \n",
+    "# fonction permettant de tracer le graphique avec les points\n",
     "# expérimentaux et la courbe obtenue après modélisation\n",
     "\n",
     "def courbemodelisee (x,y,ymodel) :\n",
@@ -91,7 +94,10 @@
     }
    ],
    "source": [
-    "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3])  \n",
+    "# tableaux numpy obligatoires à cause de la \n",
+    "# fonction np.polyfit utilisée auparavant\n",
+    "\n",
+    "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3])      \n",
     "U=np.array([0,1.7,3.4,5.1,6.8,8.5])                  \n",
     "Umodel=modelisation(I,U)\n",
     "courbemodelisee(I,U,Umodel)"
