--- a/07-activites/02-seconde/mouvement_parabolique_vecteurs_vitesse/trace_vecteurs_vitesse_avec_fonctions.ipynb
+++ b/07-activites/02-seconde/mouvement_parabolique_vecteurs_vitesse/trace_vecteurs_vitesse_avec_fonctions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tracé des vecteurs vitesse"
+    "## Tracé des vecteurs vitesse (version avec fonctions)"
    ]
   },
   {
