--- a/05-bases/11-modelisation.ipynb
+++ b/05-bases/11-modelisation.ipynb
@@ -88,7 +88,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "# listes numpy impératives pour réaliser la modélisation ultérieure\n",
+    "# tableaux numpy impératifs pour réaliser la modélisation ultérieure\n",
     "I=np.array([0,25e-3,50e-3,75e-3,100e-3,125e-3])      \n",
     "U=np.array([0,1.7,3.4,5.1,6.8,8.5]) \n",
     "\n",
@@ -296,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
