--- a/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_prof.ipynb
+++ b/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_prof.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mouvement d'un satellite géostationnaire"
+    "## Mouvement d'un satellite géostationnaire (version professeur)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problématique : Comment la force d'attraction gravitationnelle exercée par la Terre sur le satellite GOES-17 influence la variation de son vecteur vitesse?\n"
+    "**Problématique : Comment la force d'attraction gravitationnelle exercée par la Terre sur le satellite GOES-17 influence la variation de son vecteur vitesse?**\n"
    ]
   },
   {
