--- a/07-activites/02-seconde/dissolution/dissolution_eleve.ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution_eleve.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -9,7 +8,7 @@
     }
    },
    "source": [
-    "# Préparation d'une solution par dissolution\n",
+    "# Préparation d'une solution par dissolution (version élève)\n",
     "\n",
     "Contexte : Un technicien de laboratoire aurait besoin d'un petit programme en Python afin de calculer facilement la masse m de soluté à peser pour fabriquer une solution de concentration en soluté apporté C et de volume V. Aidez-le à réaliser ce petit programme!!\n",
     "\n",
@@ -82,13 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Enregistrer ce fichier sous format.py puis l'ouvrir dans l'application spider et l'exécuter."
-   ]
   }
  ],
  "metadata": {
@@ -108,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
