--- a/07-activites/02-seconde/dissolution/dissolution_prof.ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution_prof.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -9,7 +8,7 @@
     }
    },
    "source": [
-    "# Préparation d'une solution par dissolution\n",
+    "# Préparation d'une solution par dissolution (version professeur)\n",
     "\n",
     "Contexte : Un technicien de laboratoire aurait besoin d'un petit programme en Python afin de calculer facilement la masse m de soluté à peser pour fabriquer une solution de concentration en soluté apporté C et de volume V. Aidez-le à réaliser ce petit programme!!\n",
     "\n",
@@ -125,13 +124,6 @@
     "m=C*M*V\n",
     "print('m ={0:.1e}'.format(m),'g')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Enregistrer ce fichier sous format.py puis l'ouvrir dans l'application spider et l'exécuter."
-   ]
   }
  ],
  "metadata": {
@@ -151,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
