fix(activites): précisiions numpy

--- a/05-bases/09-fichiers-csv.ipynb
+++ b/05-bases/09-fichiers-csv.ipynb
@@ -108,7 +108,7 @@
     "# le contenu d'une cellule est initialement lu comme une chaîne de \n",
     "# caractères \n",
     "# nous voulons obtenir des listes de nombres réels correspondant \n",
-    "# aux colonnes de notre tableau, \n",
+    "# aux colonnes de notre tableau csv, \n",
     "# donc :\n",
     "#        - il ne faut pas prendre en compte les lignes \n",
     "#          correspondant aux entêtes\n",
@@ -121,25 +121,27 @@
     "        \n",
     "        \n",
     "# test permettant de déterminer si le contenu de la première cellule \n",
-    "# de la ligne n'est pas un nombre en testant le premier caractère de \n",
-    "# ce contenu.   \n",
+    "# de la ligne du tableau csv n'est pas un nombre en testant le premier \n",
+    "# caractère de ce contenu.   \n",
     "# Si le test est validé, grâce à la commande \"continue\", on revient au \n",
     "# début de la boucle for sans continuer d'exécuter son contenu car on \n",
-    "# suppose que la ligne est une ligne d'entête et on change de ligne!\n",
+    "# suppose que la ligne du tableau csv est une ligne d'entête et on \n",
+    "# change de ligne!\n",
     "\n",
-    "        for row in rfichier:    # pour chaque ligne du fichier\n",
+    "        for row in rfichier:    # pour chaque ligne du fichier csv\n",
     "    \n",
     "            if row[0][0] not in (\"0\",\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\n",
     "                                 \"9\",\",\",\".\"):  \n",
     "                continue  \n",
     "                \n",
     "                \n",
-    "# on parcourt chaque cellule d'une ligne correspondant à une colonne\n",
+    "# on parcourt chaque cellule d'une ligne du tableau csv correspondant à \n",
+    "# une colonne du tableau csv.\n",
     "\n",
     "            for i in range (len(row)):  \n",
     "        \n",
     "# création d'une liste vide qui contiendra les valeurs des cellules \n",
-    "# d'une colonne        \n",
+    "# d'une colonne du fichier csv.       \n",
     "                X = []       \n",
     "    \n",
     "# ajout de cette liste au tableau\n",
