--- a/05-bases/10-graphiques_partie_1.ipynb
+++ b/05-bases/10-graphiques_partie_1.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9d731da240>"
+       "<matplotlib.legend.Legend at 0x7f8d48f48278>"
       ]
      },
      "execution_count": 5,
@@ -406,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9d736635f8>"
+       "<matplotlib.legend.Legend at 0x7f8d493d4748>"
       ]
      },
      "execution_count": 6,
@@ -469,7 +469,7 @@
     "U1=[0,1.7,3.4,5.1,6.8,8.5] \n",
     "U2 = [0,3,6,9,12,15]\n",
     "plt.figure()\n",
-    "plt.plot(I,U1,'b+-.',label='U1=f(I)')\n",
+    "a=plt.plot(I,U1,'b+-.',label='U1=f(I)')\n",
     "plt.plot(I,U2,'rx-',label='U2=g(I)')\n",
     "plt.legend(loc=2)\n",
     "plt.show()"
@@ -479,7 +479,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deuxième possibilité :"
+    "Deuxième possibilité : La méthode plt.plot() renvoie une liste de courbes. Il est donc possible d'afficher deux courbes simultanément avec un seul appel de la methode plt.plot() comme dans l'exemple ci-dessous. \n",
+    "\n",
+    "Remarque utile pour comprendre le prochain tutoriel sur les animations de graphique : L'indice de la première courbe est 0, celui de la deuxième est 1..."
    ]
   },
   {
@@ -506,7 +508,7 @@
     "U2 = [0,3,6,9,12,15]\n",
     "plt.figure()\n",
     "plt.plot(I,U1,'b+-.',I,U2,'rx-')\n",
-    "plt.show(a[0])"
+    "plt.show()"
    ]
   },
   {
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +709,7 @@
        "Text(0.1, 5, 'résistance du dipôle égale à 68 Ohms')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
