--- a/07-activites/01-premiere/mouvement_parabolique_et_acceleration_csv/mouvement_parabolique_et_acceleration_avec_fonctions.ipynb
+++ b/07-activites/01-premiere/mouvement_parabolique_et_acceleration_csv/mouvement_parabolique_et_acceleration_avec_fonctions.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derivee(z,t):\n",
+    "def derivee(t,z):\n",
     "    dz=[]\n",
     "    for i in range (1,len(z)-1) :\n",
     "        dzi=(z[i+1]-z[i-1])/(t[i+1]-t[i-1])\n",
@@ -203,10 +203,10 @@
     "t=tableau[0]\n",
     "x=tableau[1]\n",
     "y=tableau[2]\n",
-    "vx=derivee(x,t)\n",
-    "vy=derivee(y,t)\n",
-    "ax=derivee(vx,t)\n",
-    "ay=derivee(vy,t)\n",
+    "vx=derivee(t,x)\n",
+    "vy=derivee(t,y)\n",
+    "ax=derivee(t,vx)\n",
+    "ay=derivee(t,vy)\n",
     "graphacceleration (x,y,ax,ay)\n",
     "comparaison (t,ax,ay)"
    ]
