--- a/07-activites/01-premiere/suivi_avancement/suivi_avancement_eleve.ipynb
+++ b/07-activites/01-premiere/suivi_avancement/suivi_avancement_eleve.ipynb
@@ -21,6 +21,7 @@
    "source": [
     "# rattachement des librairies gérant les tracés de courbes et certains outils mathématiques \n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "import numpy as np"
    ]
   },
@@ -153,9 +154,9 @@
    "source": [
     "###### **Affichage des courbes permettant de suivre l'évolution des quantités de matière**\n",
     "\n",
-    "La ligne de code 2 ci-dessous permet d'afficher le graphe de l'évolution de la quantité de matière de A en fonction de l'avancement X. \n",
+    "La ligne de code 1 ci-dessous permet d'afficher le graphe de l'évolution de la quantité de matière de A en fonction de l'avancement X. \n",
     "\n",
-    "Compléter les lignes 3, 4 et 5 pour afficher les courbes correspondant aux évolutions des quantités de matière des espèces chimiques B, C et D en fonction de l'avancement.\n",
+    "Compléter les lignes 2, 3 et 4 pour afficher les courbes correspondant aux évolutions des quantités de matière des espèces chimiques B, C et D en fonction de l'avancement.\n",
     "\n",
     "NOTE CODAGE : la commande plt.plot peut être enrichie de divers arguments (comme ici avec r- = r pour red  et - pour ligne) :\n",
     " \n",
@@ -172,16 +173,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    %matplotlib inline\n",
-    "    plt.plot(X,nA,'r-',lw=1,label='nA')\n",
+    "plt.plot(X,nA,'r-',lw=1,label='nA')\n",
     "    \n",
     "    \n",
     "    \n",
-    "    plt.grid()\n",
-    "    plt.xlabel('x (mol)')\n",
-    "    plt.ylabel('n (mol)')\n",
-    "    plt.legend()\n",
-    "    plt.show()"
+    "plt.grid()\n",
+    "plt.xlabel('x (mol)')\n",
+    "plt.ylabel('n (mol)')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "**Modélisation des droites obtenues**\n",
     "\n",
     "Les lignes de code suivantes vont permettre de modéliser chacune des 4 droites obtenues sur le graphe ci-dessus.\n",
-    "Ces droites sont de type linéaire ou affine et peuvent être modélisées avec un polynôme d'ordre 1 : mx+p (où x est à la puissance 1).\n",
+    "Ces droites sont de type linéaire ou affine et peuvent être modélisées avec un polynôme de degré 1 : mx+p (où x est à la puissance 1).\n",
     "Les résultats des quatre modélisations sont ensuite affichés pour analyse.\n",
     "\n",
     "Compléter les lignes de code 2, 3 et 4 (sur le modèle de la ligne 1) pour modéliser les courbes concernant l'évolution des quantités de matière des espèces chimiques B, C et D.\n",
@@ -243,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
