--- a/07-activites/02-seconde/dissolution/dissolution_eleve-download.ipynb
+++ b/07-activites/02-seconde/dissolution/dissolution_eleve-download.ipynb
@@ -41,19 +41,20 @@
     "M=58.5   # masse molaire en g/mol\n",
     "\n",
     "\n",
-    "# ligne de code permettant d'afficher la variable\n",
+    "# ligne de code permettant d'afficher la valeur de la \n",
+    "# variable M\n",
     "\n",
     "print ('M =',M,'g/mol')\n",
     "\n",
     "\n",
-    "# ligne de code permettant d'afficher la variable \n",
-    "# en écriture décimale avec une décimale\n",
+    "# ligne de code permettant d'afficher la valeur de la \n",
+    "# variable M en écriture décimale avec une décimale\n",
     "\n",
     "print('M ={0:.1f}'.format(M),'g/mol') \n",
     "\n",
     "\n",
-    "# ligne de code permettant d'afficher la variable \n",
-    "# en écriture scientifique avec deux décimales \n",
+    "# ligne de code permettant d'afficher la valeur de la \n",
+    "# variable M en écriture scientifique avec deux décimales \n",
     "# donc trois chiffres significatifs \n",
     "\n",
     "print('M ={0:.2e}'.format(M),'g/mol')                                           "
