--- a/07-activites/02-seconde/mouvement_parabolique_vecteurs_vitesse/chute_balle_cycliste_avec_fonctions.ipynb
+++ b/07-activites/02-seconde/mouvement_parabolique_vecteurs_vitesse/chute_balle_cycliste_avec_fonctions.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import csv"
@@ -43,7 +42,7 @@
     "        for row in rfichier:              \n",
     "            for i in range (len(row)):\n",
     "                tableau[i].append(float(row[i].replace(\",\",'.')))     \n",
-    "    return (tableau)"
+    "    return tableau"
    ]
   },
   {
@@ -52,12 +51,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vitesse(z,t):\n",
-    "    vz=np.array([])\n",
+    "def vitesse(t,z):\n",
+    "    vz=[]\n",
     "    for i in range (1,len(z)-1):\n",
     "        vzi=(z[i+1]-z[i-1])/(t[i+1]-t[i-1])\n",
-    "        vz=np.append(vz,[vzi])\n",
-    "    return (vz)"
+    "        vz.append(vzi)\n",
+    "    return vz"
    ]
   },
   {
@@ -117,8 +116,8 @@
     "print(x)\n",
     "y=tableau[2]\n",
     "print(y)\n",
-    "vx=vitesse(x,t)\n",
-    "vy=vitesse(y,t)\n",
+    "vx=vitesse(t,x)\n",
+    "vy=vitesse(t,y)\n",
     "graphvect(x,y,vx,vy)"
    ]
   }
