--- a/07-activites/02-seconde/mouvement_parabolique_vecteurs_vitesse/chute_balle_cycliste_sans_fonction.ipynb
+++ b/07-activites/02-seconde/mouvement_parabolique_vecteurs_vitesse/chute_balle_cycliste_sans_fonction.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import csv"
@@ -66,10 +65,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vx=np.array([])\n",
+    "vx=[]\n",
     "for i in range (1,len(x)-1):\n",
     "    vxi=(x[i+1]-x[i-1])/(t[i+1]-t[i-1])\n",
-    "    vx=np.append(vx,[vxi])"
+    "    vx.append(vxi)"
    ]
   },
   {
@@ -78,10 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vy=np.array([])\n",
+    "vy=[]\n",
     "for i in range (1,len(y)-1):\n",
     "    vyi=(y[i+1]-y[i-1])/(t[i+1]-t[i-1])\n",
-    "    vy=np.append(vy,[vyi])"
+    "    vy.append(vyi)"
    ]
   },
   {
@@ -117,6 +116,20 @@
     "plt.title(\"Tracé des vecteurs vitesse instantanée\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
