--- a/05-bases/04-operations_basiques.ipynb
+++ b/05-bases/04-operations_basiques.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Opération mathématiques usuelles"
+    "## Opérations mathématiques usuelles"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
