--- a/06-memos/glossaire.tex
+++ b/06-memos/glossaire.tex
@@ -116,7 +116,7 @@ append
  & 
 Ajoute une valeur à une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -126,7 +126,7 @@ numpy
  & 
 Crée un tableau
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -136,7 +136,7 @@ numpy
  & 
 Crée un tableau
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -176,7 +176,7 @@ random
  & 
 Renvoie au hasard un élément d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -336,7 +336,7 @@ insert
  & 
 Insère un élément dans une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -356,7 +356,7 @@ join
  & 
 Concatène les éléments d'une liste séparés par un séparateur
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -376,19 +376,10 @@ len
  & 
 Renvoie la taille d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
-linspace
- & 
-numpy
- & 
-Crée un tableau
- & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
-listes}
-\\ \hline
 
 list
  & 
@@ -396,7 +387,7 @@ list
  & 
 Convertit une chaîne de caractères en liste de caractères
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -406,7 +397,7 @@ min
  & 
 Renvoie le plus petit élément d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -416,7 +407,7 @@ max
  & 
 Renvoie le plus grand élément d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -429,6 +420,37 @@ Gradue les axes
 \href{https://pyspc.readthedocs.io/fr/latest/05-bases/10-graphiques_partie_1.html}{Comment
 créer un graphique-1?}
 \\ \hline
+
+np.linspace
+ & 
+numpy
+ & 
+Crée un tableau
+ & 
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-tableaux_numpy.html}{Tableaux numpy}
+\\ \hline
+
+
+np.arange
+ &
+ numpy
+ & 
+ Crée un tableau numpy de valeurs séquentielles
+ & 
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-tableaux_numpy.html}{Tableaux numpy}
+\\ \hline
+
+
+np.array
+ &
+ numpy
+ & 
+Convertir une liste en tableau numpy
+ & 
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-tableaux_numpy.html}{Tableaux numpy}
+\\ \hline
+
+
 
 not in
  & 
@@ -486,7 +508,7 @@ pop
  & 
 Supprime un élément d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -526,7 +548,7 @@ remove
  & 
 Supprime un élément d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -556,7 +578,7 @@ random
  & 
 Renvoie au hasard un ou plusieurs éléments d'une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -586,7 +608,7 @@ sort
  & 
 Trie une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
@@ -596,7 +618,7 @@ sorted
  & 
 Trie une liste
  & 
-\href{https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html}{Les
+\href{https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html}{Les
 listes}
 \\ \hline
 
