--- a/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_eleve-download.ipynb
+++ b/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_eleve-download.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "# cellule 3 : coordonnées du vecteur vitesse du satellite\n",
     "\n",
-    "def coordvit(u):\n",
+    "def coordvit(t,u):\n",
     "    vu=[]\n",
     "    for i in range (1,len(u)-1):\n",
     "        vui=\n",
