--- a/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_prof.ipynb
+++ b/07-activites/01-premiere/mouvement_satellite_force_variation_vecteur_vitesse/mouvement_satellite_geostationnaire_prof.ipynb
@@ -187,15 +187,15 @@
    "source": [
     "# cellule 3 : coordonnées du vecteur vitesse du satellite\n",
     "\n",
-    "def coordvit(u):\n",
+    "def coordvit(t,u):\n",
     "    vu=[]\n",
     "    for i in range (1,len(u)-1):\n",
     "        vui=(u[i+1]-u[i-1])/(t[i+1]-t[i-1])\n",
     "        vu.append(vui)\n",
     "    return(vu)\n",
     "\n",
-    "vx=coordvit(x)\n",
-    "vy=coordvit(y)"
+    "vx=coordvit(t,x)\n",
+    "vy=coordvit(t,y)"
    ]
   },
   {
