fix(bases): changement niveau et presentation titres

--- a/05-bases/07-listes.ipynb
+++ b/05-bases/07-listes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Les listes**\n",
+    "# Les listes\n",
     "\n",
     "code sous licence creative commun CC BY-NC-SA    BY Dominique Devedeux"
    ]
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Comment créer des listes ?**\n",
+    "## Créer des listes\n",
     "\n",
     "*L = [5,2,8,17,6,14]*           \n",
     "\n",
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Plusieurs manières de récupérer les éléments d'une liste : cours**\n",
+    "## Récupérer les éléments d'une liste\n",
     "\n",
     "ATTENTION : l'accès à un élément d'un n-uplet par indice s'effectue grâce à des crochets comme pour les listes.\n",
     "\n",
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Plusieurs méthodes pour ajouter une valeur ou supprimer une valeur d'une liste (cours et  applications)**\n",
+    "## Ajouter une valeur ou supprimer une valeur d'une liste\n",
     "\n",
     "*Les méthodes modifient les listes et leur syntaxe est toujours similaire :  L.méthode()*"
    ]
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Quelques fonctions (et une méthode) permettant d'analyser le contenu d'une liste : cours**\n",
+    "## Analyser le contenu d'une liste\n",
     "\n",
     "*Les fonctions ne modifient pas les listes et leur syntaxe est toujours similaire : fonction(L)*\n",
     "\n",
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Comment parcourir le contenu d'une liste : cours**\n",
+    "## Parcourir le contenu d'une liste\n",
     "\n",
     "La boucle « for » est particulièrement bien adaptée aux listes de valeurs. \n",
     "\n",
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Concaténation de listes : cours**\n",
+    "## Concaténation de listes\n",
     "\n",
     "On peut concaténer (mettre bout à bout) des listes, et ce, de plusieurs manières différentes.\n",
     "\n",
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Conversion d'une chaîne de caractères vers une liste de caractères ou l'inverse : cours**\n",
+    "## Conversion d'une chaîne de caractères vers une liste de caractères ou l'inverse\n",
     "\n",
     "$\\rightarrow$ D'une chaîne de caractères vers une liste de caractères\n",
     "\n",
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Création de listes de listes (donc de tableau !) : cours**\n",
+    "# Listes de listes (tableaux)\n",
     "\n",
     "Nous allons travailler sur un nouvel exemple\n",
     "\n",
@@ -535,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
