--- a/05-bases/08-tableaux_numpy.ipynb
+++ b/05-bases/08-tableaux_numpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Les tableaux numpy**\n",
+    "# Les tableaux numpy\n",
     "\n",
     "\n",
     "code sous licence creative commun CC BY-NC-SA    BY Dominique Devedeux et Gaëlle Rebolini"
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Plusieurs manières de créer des tableaux numpy à une dimension**\n",
+    "## Créer des tableaux numpy à une dimension\n",
     "\n",
     "- *T = np.array([5,2,8,17,6,14])*          \n",
     "\n",
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Plusieurs manières de récupérer les éléments d'un tableau numpy : cours**\n",
+    "## Récupérer les éléments d'un tableau numpy\n",
     "\n",
     "Nous allons travailler sur un exemple :\n",
     "\n",
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Plusieurs fonctions pour ajouter une valeur ou supprimer une valeur d'un tableau numpy (cours et  applications)**\n",
+    "## Ajouter une valeur ou supprimer une valeur d'un tableau numpy\n",
     "\n",
     "*Les fonctions ne modifient pas les tableaux d'origine mais retournent de nouveaux tableaux en ajoutant ou en supprimant une valeur du tableau d'origine. Leur syntaxe est toujours similaire : np.fonction(T)*"
    ]
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Quelques fonctions (et une méthode) permettant d'analyser le contenu d'un tableau numpy : cours**\n",
+    "## Analyser le contenu d'un tableau numpy\n",
     "\n",
     "*Les fonctions ne modifient pas les tableaux numpy et leur syntaxe est toujours similaire : fonction(T)*\n",
     "\n",
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Comment parcourir le contenu d'un tableau numpy : cours**\n",
+    "## Parcourir le contenu d'un tableau numpy\n",
     "\n",
     "Comme pour les listes , la boucle « for » est particulièrement bien adaptée aux tableaux de valeurs. \n",
     "\n",
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Opérations mathématiques sur les tableaux numpy (vectorisation) : cours**\n",
+    "## Opérations mathématiques sur les tableaux numpy (vectorisation)\n",
     "\n",
     "Numpy permet de réaliser des opérations directement sur les éléments d'un tableau sans être obligé de créer une boucle for comme pour les listes, d'où la grande utilité d'utiliser des tableaux numpy au lieu de listes dans les programmes liés aux sciences-physiques.\n",
     "\n",
@@ -551,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Conversion d'un tableau numpy de caractères vers une chaîne de caractères : cours**\n",
+    "## Conversion d'un tableau numpy de caractères vers une chaîne de caractères\n",
     "\n",
     "Attention : ici, le tableau numpy doit être forcément constitué de caractères\n",
     "\n",
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Création de tableau numpy à deux dimensions : cours**\n",
+    "## Création de tableau numpy à deux dimensions\n",
     "\n",
     "Nous allons travailler sur un nouvel exemple\n",
     "\n",
@@ -676,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
